Update branding, license, and add legacy portfolio link

--- a/index.html
+++ b/index.html
@@ -466,6 +466,8 @@
                 <span class="opacity-30">Nav</span>
                 <a href="#about-me" class="hover:text-gray-400 transition-colors">About</a>
                 <a href="#projects" class="hover:text-gray-400 transition-colors">Works</a>
+                <a href="https://alanjoseph77.github.io/Portfolio/" target="_blank"
+                    class="hover:text-gray-400 transition-colors">Old Portfolio</a>
             </div>
             <div class="flex flex-col space-y-4 col-span-2 md:col-span-1">
                 <span class="opacity-30">Legal</span>
