--- a/index.html
+++ b/index.html
@@ -296,6 +296,106 @@
             </div>
         </section>
 
+        <!-- Experience & Education Section -->
+        <section id="experience" class="py-32 px-6 md:px-12 max-w-7xl mx-auto border-b border-black/5">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-32">
+                <!-- Experience -->
+                <div>
+                    <h3
+                        class="text-4xl font-black tracking-tighter uppercase mb-12 font-display flex items-center space-x-4">
+                        <span class="w-3 h-3 bg-black rounded-full"></span>
+                        <span>Experience</span>
+                    </h3>
+                    <div class="space-y-12">
+                        <div class="group hover:translate-x-2 transition-transform duration-500">
+                            <span class="text-[10px] font-black tracking-widest text-gray-400 block mb-2 uppercase">Jun
+                                2025 — Present</span>
+                            <h4 class="text-2xl font-bold tracking-tighter uppercase mb-2">Junior Project Assistant</h4>
+                            <p class="text-[12px] font-bold tracking-widest uppercase opacity-60 mb-2">CSD, NITK
+                                Surathkal</p>
+                            <p class="text-sm opacity-60 leading-relaxed max-w-sm">
+                                Engineered Power BI reporting solutions for Tata Motors (40% effort reduction).
+                                Developed interactive 3D visualizations using Three.js.
+                            </p>
+                        </div>
+                        <div class="group hover:translate-x-2 transition-transform duration-500">
+                            <span class="text-[10px] font-black tracking-widest text-gray-400 block mb-2 uppercase">Jan
+                                2025 — Mar 2025</span>
+                            <h4 class="text-2xl font-bold tracking-tighter uppercase mb-2">Virtual Lab Dev Intern</h4>
+                            <p class="text-[12px] font-bold tracking-widest uppercase opacity-60 mb-2">NITK Surathkal
+                            </p>
+                            <p class="text-sm opacity-60 leading-relaxed max-w-sm">
+                                Developed Python automation scripts for synthetic datasets. Integrated real-time
+                                feedback loops for student engagement metrics.
+                            </p>
+                        </div>
+                        <div class="group hover:translate-x-2 transition-transform duration-500">
+                            <span class="text-[10px] font-black tracking-widest text-gray-400 block mb-2 uppercase">Oct
+                                2024 — Dec 2024</span>
+                            <h4 class="text-2xl font-bold tracking-tighter uppercase mb-2">React Native Dev Intern</h4>
+                            <p class="text-[12px] font-bold tracking-widest uppercase opacity-60 mb-2">Inmakes Learning
+                                Hub</p>
+                            <p class="text-sm opacity-60 leading-relaxed max-w-sm">
+                                Managed data flow for cross-platform apps. Analyzed user interaction logs via Root Cause
+                                Analysis.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Education & Certifications -->
+                <div>
+                    <h3
+                        class="text-4xl font-black tracking-tighter uppercase mb-12 font-display flex items-center space-x-4">
+                        <span class="w-3 h-3 bg-black rounded-full"></span>
+                        <span>Education</span>
+                    </h3>
+                    <div class="space-y-12">
+                        <div class="group hover:translate-x-2 transition-transform duration-500">
+                            <span class="text-[10px] font-black tracking-widest text-gray-400 block mb-2 uppercase">2023
+                                — 2025</span>
+                            <h4 class="text-2xl font-bold tracking-tighter uppercase mb-2">Master of Computer
+                                Applications</h4>
+                            <p class="text-[12px] font-bold tracking-widest uppercase opacity-60 mb-2">Mar Athanasios
+                                College</p>
+                        </div>
+                        <div class="group hover:translate-x-2 transition-transform duration-500">
+                            <span class="text-[10px] font-black tracking-widest text-gray-400 block mb-2 uppercase">2020
+                                — 2023</span>
+                            <h4 class="text-2xl font-bold tracking-tighter uppercase mb-2">Bachelor of Computer
+                                Applications</h4>
+                            <p class="text-[12px] font-bold tracking-widest uppercase opacity-60 mb-2">Devamatha College
+                            </p>
+                        </div>
+
+                        <!-- Certifications -->
+                        <div class="pt-8 border-t border-black/5">
+                            <h4 class="text-xl font-bold tracking-tighter uppercase mb-6 flex items-center space-x-2">
+                                <span class="w-2 h-2 bg-black rounded-full"></span>
+                                <span>Certifications</span>
+                            </h4>
+                            <div class="space-y-4">
+                                <div class="group hover:translate-x-2 transition-transform duration-500">
+                                    <h5 class="text-lg font-bold tracking-tighter">Data Analytics Certification</h5>
+                                    <p class="text-[10px] uppercase tracking-widest opacity-50">Entri Elevate</p>
+                                </div>
+                                <div class="group hover:translate-x-2 transition-transform duration-500">
+                                    <h5 class="text-lg font-bold tracking-tighter">Microsoft Certified: Data Analyst
+                                    </h5>
+                                    <p class="text-[10px] uppercase tracking-widest opacity-50">Power BI, Data Modeling
+                                    </p>
+                                </div>
+                                <div class="group hover:translate-x-2 transition-transform duration-500">
+                                    <h5 class="text-lg font-bold tracking-tighter">Python for Data Science</h5>
+                                    <p class="text-[10px] uppercase tracking-widest opacity-50">NPTEL</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Selected Work -->
         <section id="projects" class="py-32 px-6 md:px-12 max-w-7xl mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-end mb-24 border-b-2 border-black pb-12">
